<resources>
    <string name="app_name">GitHub Organization Search</string>

    <string name="hint_enter_an_organization">Enter an Organization</string>
    <string name="search_edit_text_autofill_hint">Organization Name</string>

    <string name="search_button_label">Search</string>
    <string name="search_button_content_desc">Search Button</string>
    <string name="error_organization_not_found">Organization not found. Please check input.</string>
    <string name="error_label">Error: </string>
    <string name="api_error_loading_org">Error getting Organization</string>
    <string name="api_error_loading_repos">Error loading Repos</string>
    <string name="sample_org_name">The New York Times</string>
    <string name="sample_org_login">nytimes</string>
    <string name="organization_avatar_content_desc">Organization Avatar</string>
    <string name="sample_org_location">New York, NY</string>
    <string name="sample_org_blog">nytimes.com</string>
    <string name="sample_org_desc">We are working to build community through open source technology. NB: members must have two-factor auth</string>
    <string name="sample_repo_name">NYTPhotoViewer</string>
    <string name="sample_repo_desc">A modern photo viewing experience for iOS.</string>
    <string name="sample_repo_lang">Objective-C</string>
    <string name="label_top_repos">Top Repositories</string>
    <string name="hint_org">NYTimes</string>
    <string name="example_error_message">Not Found</string>

    <!--<string name="error_invalid_url">URL doesn\'t look valid</string>-->

</resources>
