<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:id="@+id/repoCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repoConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/repoNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sample_repo_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#DE000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repoDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sample_repo_desc"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="#DE000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoNameTextView" />

        <TextView
            android:id="@+id/repoLanguageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:text="@string/sample_repo_lang"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="#DE000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoDescriptionTextView" />

        <TextView
            android:id="@+id/repoStarsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:text="303"
            app:layout_constraintTop_toBottomOf="@+id/repoDescriptionTextView"
            app:layout_constraintStart_toEndOf="@+id/repoLanguageTextView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/repoForksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:drawableStart="@drawable/ic_repo_forked"
            android:drawablePadding="4dp"
            android:text="47"
            app:layout_constraintTop_toBottomOf="@+id/repoDescriptionTextView"
            app:layout_constraintStart_toEndOf="@+id/repoStarsTextView"
            tools:ignore="HardcodedText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
